--- a/index.html
+++ b/index.html
@@ -10,27 +10,7 @@
   <main>
     <h1>🔑 Find the Key</h1>
 
-    <div class="game-container">
-      <!-- These are fixed slots. We will swap which key-id sits in each slot. -->
-      <div class="key" data-slot="0">
+    <div class="game-area">
+      <div class="key" data-id="0">
         <img src="https://cdn-icons-png.flaticon.com/512/61/61457.png" alt="key">
       </div>
-      <div class="key" data-slot="1">
-        <img src="https://cdn-icons-png.flaticon.com/512/61/61457.png" alt="key">
-      </div>
-      <div class="key" data-slot="2">
-        <img src="https://cdn-icons-png.flaticon.com/512/61/61457.png" alt="key">
-      </div>
-    </div>
-
-    <p id="result"></p>
-    <div class="controls">
-      <button id="startBtn">Start Game</button>
-      <button id="resetBtn">Reset</button>
-    </div>
-    <small class="hint">One key will *lighten* — watch it, then follow it through the shuffle. Good luck! ✨</small>
-  </main>
-
-  <script src="script.js"></script>
-</body>
-</html>
