--- a/index.html
+++ b/index.html
@@ -14,3 +14,21 @@
       <div class="key" data-id="0">
         <img src="https://cdn-icons-png.flaticon.com/512/61/61457.png" alt="key">
       </div>
+      <div class="key" data-id="1">
+        <img src="https://cdn-icons-png.flaticon.com/512/61/61457.png" alt="key">
+      </div>
+      <div class="key" data-id="2">
+        <img src="https://cdn-icons-png.flaticon.com/512/61/61457.png" alt="key">
+      </div>
+    </div>
+
+    <p id="result"></p>
+    <div class="controls">
+      <button id="startBtn">Start Game</button>
+      <button id="resetBtn">Reset</button>
+    </div>
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html>
